--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -2,5 +2,7 @@
 - name: install nginx
   apt: name=nginx state=present
 - name: update config line
-  replace: dest=/etc/nginx/sites-available/default regexp='(index)\.html' replace='\1\.php'
+  replace: dest=/etc/nginx/sites-available/default regexp='(index)\.index' replace='\1\.php'
+  notify:
+    - restart nginx
   
