--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -3,4 +3,4 @@
   apt: name=nodejs state=present
   apt: name=npm state=present
 - name: symlink node
-  shell: ln -s /usr/bin/nodejs /usr/bin/node
+  shell: src=/usr/bin/nodejs dest=/usr/bin/node state=link
