--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
+- name: apt add
+  apt_repository: repo='ppa:chris-lea/node.js'
+- name: apt update
+  apt: update_cache=yes
 - name: apt install
   apt: name=nodejs state=present
-  apt: name=npm state=present
-- name: symlink node
-  shell: src=/usr/bin/nodejs dest=/usr/bin/node state=link
