--- a/roles/codius_host/tasks/main.yml
+++ b/roles/codius_host/tasks/main.yml
@@ -2,9 +2,10 @@
 - name: apt install
   apt: name=libc6-i386 state=present
   apt: name=lib32stdc++6 state=present
-- name: install libseccomp
+- name: add i386
   shell: dpkg --add-architecture i386
   apt: upgrade=yes
+- name: install libseccomp
   apt: name=libseccomp2:i386 state=present
 - name: download
   git: repo=https://github.com/codius/codius-host.git
